# botbot

./: .gitignore  AGENTS.md  SOUL.md  check_models.py  config.yaml  debug_hive.py  director.py  get_profile.py  groq_brain.py  logs.sh  main.py  molt_client.py  package-lock.json  package.json  pyproject.toml  register.py  requirements.txt  restart.sh  run_bot.sh
agents/: builder.py  community.py  community_jester.py  meme.py  social.py
debt_portfolio_analyzer/: __init__.py  cli.py  compliance.py  loader.py  models.py  report.py  roi.py  scoring.py
examples/: sample_tape.csv
tests/: test_cli.py  test_compliance.py  test_loader.py  test_roi.py  test_scoring.py
tools/: ai.py  memory.py  moltbook.py  skills.py
